k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livre-dor-backend
  template:
    metadata:
      labels:
        app: livre-dor-backend
    spec:
      containers:
      - name: backend
        image: achveiya/mon-backend:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: livre-dor-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
  type: ClusterIP
