k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livre-dor-frontend
  template:
    metadata:
      labels:
        app: livre-dor-frontend
    spec:
      containers:
      - name: frontend
        image: achveiya/mon-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: livre-dor-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
